--- a/css/register.css
+++ b/css/register.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #310b37;
+    background-color: #DFE9F5;
     color: white;
     display: flex;
     justify-content: center;
@@ -7,7 +7,7 @@ body{
 }
 .container{
     height: 100%;
-    background-color: rgb(124, 86, 124);
+    background-color: #1f8fc3;
     color: rgb(196, 196, 196);
     width: 500px;
     padding: 10px;
